fix wrong color in textarea

--- a/web/app/themes/huskies-theme/styles/form.less
+++ b/web/app/themes/huskies-theme/styles/form.less
@@ -299,6 +299,7 @@
   .wp-editor-area {
     margin: 0;
     width: 100% !important;
+    color: @c-black !important;
   }
 }
 
